# django-ninja-jwt-basic

./: README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: coverage.yml  tests.yml
django_ninja_jwt_basic/: api.py  security.py
tests/: conftest.py  settings.py  test_auth.py  test_login_endpoint.py  test_securing_enpoints_with_authentication.py
