[tool.poetry]
name = "django-ninja-jwt-basic"
version = "0.1.0"
description = ""
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
django = "^5.0.0"
django-ninja = "^1.2.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
